animation was sending the duck behind waves, fixed

--- a/css/duck.css
+++ b/css/duck.css
@@ -152,7 +152,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	animation: bird-up-down var(--duck-speed-half) linear infinite;
+	animation: bird-up-down var(--duck-speed-half) linear infinite, moveDuck 12s linear infinite;
 }
 
 @keyframes bird-up-down {
@@ -206,9 +206,5 @@
 }
 
 .duck__wrapper {
-	overflow: hidden;
-}
-
-.duck {
-	animation: moveDuck 12s linear infinite;
+	overflow: visible;
 }
